# clgrp-1.3

./: .gitignore  Cargo.toml  Makefile.am  README.md  clgrp.c  clgrp.h  clgrp_ell.c  clgrp_ell.h  clgrp_ell_main.c  clgrp_ell_main_new.c  clgrp_ell_new.h  flake.nix  optarith.nix  qform.nix  reproduce_hang.c  reproduce_loop.c  sbatch-clgrp11-script.txt  sbatch-clgrp11-timing-test-script.txt  sbatch-clgrp5-script.txt  sbatch-clgrp5-timing-test-script.txt  sbatch-clgrp7-script.txt  sbatch-clgrp7-timing-test-script.txt  sbatch-script.txt  sieve.c
crates/clgrp/: Cargo.toml
crates/clgrp/src/: bjt.rs  lib.rs  lmfdb.rs  main.rs
crates/clgrp/testdata/: lmfdb_bjt_samples.tsv
rust/: Cargo.toml  README.md
rust/src/: main.rs
