[workspace]
members = ["crates/clgrp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "rustls",
] }
optarith = { git = "https://github.com/mkorje/liboptarith", package = "optarith", default-features = false }
qform = { git = "https://github.com/mkorje/libqform", package = "qform", default-features = false }
malachite.version = "0.9"
